--- a/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/header.jspf
+++ b/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/header.jspf
@@ -62,14 +62,18 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <!--<a class="navbar-brand" style="" href="${page}/index.htm">-->
-                    <span style="color:#fff; font-weight: bold; font-size: 24px;">
-                        ${pageTitle}
-                    </span>    
-                    <!--</a>-->
-                    <ul id="user-settings" class="nav navbar-top-links navbar-right">
-                        <%@include file="../template/usersettings.jspf" %>
-                    </ul>
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <div class="text-left">
+                                <h2 style="color: #fff;">${pageTitle}</h2>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <ul class="nav navbar-top-links navbar-right">
+                                <%@include file="../template/usersettings.jspf" %>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- /.navbar-top-links -->
