--- a/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/sidebarnavigation.jspf
+++ b/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/sidebarnavigation.jspf
@@ -24,6 +24,9 @@
             <li>
                 <a href="${page}/patient/index.htm"><i class="fa fa-table fa-fw"></i> Manage Client</a>
             </li>
+            <li>
+                <a href="${page}/person/"><i class="fa fa-table fa-fw"></i> Manage Person</a>
+            </li>
             <!--<li>
                 <a href="${page}/patient/contact/manager/item.list"><i class="fa fa-table fa-fw"></i> Manage Contacts</a>
             </li>-->
