--- a/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/dashboard/patientHistory.jspf
+++ b/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/dashboard/patientHistory.jspf
@@ -11,5 +11,6 @@
     <a href="${page}/beneficiary/chronic-infection/item.list?id=${patient.id}">Opportunistic Infections History</a><br/><br/>
     <a href="${page}/beneficiary/medhist/item.list?id=${patient.id}">Hospitalisation History</a><br/><br/>    
     <a href="${page}/beneficiary/srh/item.list?id=${patient.id}">SRH History</a><br/><br/>    
+    <a href="${page}/beneficiary/mental-health-screening/item.list?id=${patient.id}">Mental Health Screening</a><br/><br/>
     <%--<a href="${page}/beneficiary/history/item.htm?id=${patient.id}">View Full Patient Medical Profile</a><br/><br/>--%>
 </div>
