--- a/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/dashboard/catactivities.jspf
+++ b/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/dashboard/catactivities.jspf
@@ -1,7 +1,8 @@
 <b class="titleHeader">Operations</b><hr/>
 <div style="position: relative; padding-left: 20px; font-size: 14px; font-weight: bold;">
     <c:if test="${cat}">
-    <a href="${page}/patient/cat/detail/item.form?id=${catDetail.id}">Edit/ View Cat Details</a><br/><br/>
+    <a href="${page}/patient/cat/detail/item.form?id=${catDetail.id}">Edit/ View CATS Details</a><br/><br/>
+    <a href="${page}/cats-management/item.list?id=${catDetail.id}"> View CATS Activity</a><br/><br/>
     </c:if>
     <a href="${page}/patient/referral/item.list?id=${patient.id}">Referrals</a><br/><br/>
     <a href="${page}/patient/change-patient-status/item.form?id=${patient.id}">Change Patient Status</a><br/><br/>
