--- a/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/dashboard/patientProfile.jspf
+++ b/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/jsp/template/dashboard/patientProfile.jspf
@@ -1,3 +1,4 @@
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <table class="table-condensed" id="emp-profile" width="100%" style="font-size: 1.1em;">
     <tbody>
         <tr>
@@ -22,8 +23,20 @@
             <td>
                 <spring:eval expression="patient.dateJoined"/>
             </td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <c:if test="${latestViralLoad != null}">
+            <th>Viral Load Status</th>
+            <td>${latestViralLoad.viralLoadSuppressionStatus}</td>
+            </c:if>
         </tr>
+        <c:if test="${latestViralLoad != null}">
+        <tr>
+            <th>Next Viral Load Date :</th>
+            <td><spring:eval expression="latestViralLoad.nextTestDate"/></td>
+                <th>&nbsp;</th>
+                <td>&nbsp;</td>
+                <th>&nbsp;</th>
+                <td>&nbsp;</td>
+        </tr>
+        </c:if>
     </tbody>
 </table>
