Optimization of export database + allow multiple tb screening + include drug regimen and date started on detailed client report and export database patient details

--- a/zvandiri-client/zvandiri_portal/src/main/webapp/WEB-INF/jsp/template/dashboard/patientHistory.jspf
+++ b/zvandiri-client/zvandiri_portal/src/main/webapp/WEB-INF/jsp/template/dashboard/patientHistory.jspf
@@ -6,6 +6,7 @@
         <a href="${page}/beneficiary/obstetric/item.list?id=${patient.id}">Obstetric History</a><br/><br/>
     </c:if>
     <a href="${page}/beneficiary/mental-health/item.list?id=${patient.id}">Mental Health History</a><br/><br/>
+    <a href="${page}/patient/tb-screening/item.list?id=${patient.id}">TB Screening History</a><br/><br/>
     <a href="${page}/beneficiary/substance/item.list?id=${patient.id}">Substance Use History</a><br/><br/>
     <a href="${page}/beneficiary/arv-hist/item.list?id=${patient.id}">ARV History</a><br/><br/>
     <a href="${page}/beneficiary/chronic-infection/item.list?id=${patient.id}">Opportunistic Infections History</a><br/><br/>
