--- a/zvandiri-client/zvandiri_portal/src/main/webapp/WEB-INF/jsp/template/searchFragment.jspf
+++ b/zvandiri-client/zvandiri_portal/src/main/webapp/WEB-INF/jsp/template/searchFragment.jspf
@@ -6,12 +6,12 @@
             <td>
                 <div class="form-group">
                     <label>Region</label>
-                    <form:select path="province" class="form-control">
+                    <form:select multiple="true" path="provinces" class="form-control">
                         <form:option value="" label="--Select Item--"/>
                         <form:options items="${provinces}" itemLabel="name" itemValue="id"/>
                     </form:select>
                     <p class="help-block">
-                    <form:errors path="province"/>
+                    <form:errors path="provinces"/>
                     </p>
                 </div> 
             </td>
@@ -20,16 +20,28 @@
             <td>
                 <div class="form-group">
                     <label>District</label>
-                    <form:select path="district" class="form-control">
+                    <form:select multiple="true" path="districts" class="form-control">
                         <form:option value="" label="--Select Item--"/>
                         <form:options items="${districts}" itemLabel="name" itemValue="id"/>
                     </form:select>
                     <p class="help-block">
-                    <form:errors path="district"/>
+                    <form:errors path="districts"/>
                     </p>
                 </div> 
             </td>
         </c:if>
+                <td>
+                    <div class="form-group">
+                        <label>District</label>
+                        <form:select multiple="true" path="primaryClinics" class="form-control">
+                            <form:option value="" label="--Select Item--"/>
+                            <form:options items="${facilities}" itemLabel="name" itemValue="id"/>
+                        </form:select>
+                        <p class="help-block">
+                            <form:errors path="primaryClinics"/>
+                        </p>
+                    </div>
+                </td>
         <td>
             <div class="form-group">
                 <label>Start Date</label>
